--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": "^8.0",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/queue": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/notifications": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "illuminate/support": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
+        "guzzlehttp/guzzle": "^7.2",
+        "illuminate/queue": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/notifications": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.3",
